# GodotPP

./: TodoList.md  predictionNotes.md
cmake/: DownloadGodot.cmake
game/: CosmicLilac_Tiles.png.import  export_level.gd  export_level.gd.uid  level.json  player.tscn  project.godot
game/scenes/: game.tscn  packet_drop_container.gd  packet_drop_container.gd.uid  ping_container.gd  ping_container.gd.uid
src/godotpp/: CMakeLists.txt
src/godotpp/include/: gd_example.h  linking_context.h  net_manager.h  register_types.h
src/godotpp/src/: gd_example.cpp  linking_context.cpp  net_manager.cpp  register_types.cpp
src/server/: CMakeLists.txt
src/server/src/: main.cpp
src/shared/include/: net_protocol.h  sim.h  stream_reader.h  stream_writer.h  world_packet.h
